2015-08-29 Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR libgfortran/67367
	* io/unix.c (buf_read): Check for error condition and if found
	return the error code.

2015-08-29  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>

	* acinclude.m4: Remove LIBGFOR_CHECK_ATTRIBUTE_DLLEXPORT.
	* configure.ac: Remove checks for strcasestr, execl, close,
	getrlimit, readlink, getppid, powl, erfl, j0l, j1l, y0l, y1l,
	tgammal, and lgammal.
	* config.h.in: Regenerate.
	* configure: Regenerate.

2015-08-29  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>

	* io/unix.c (min): Remove unused macro.

2015-08-28  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>

	PR fortran/53668
	* intrinsics/malloc.c: Adapt comments.

2015-08-28  James Greenhalgh  <james.greenhalgh@arm.com>

	* configure.ac: Auto-detect newlib function support unless we
	know there are issues when configuring for a host.
	* configure: Regenerate.

2015-08-26  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>

	PR fortran/29600
	* Makefile.am: Add generated/shape_i{1,2}.c
	* Makefile.in: Regenerate.
	* generated/shape_i1.c: New generated file.
	* generated/shape_i2.c: New generated file.
	* generated/shape_i4.c: Regenerate.
	* generated/shape_i8.c: Regenerate.
	* generated/shape_i16.c: Regenerate.
	* gfortran.map (GFORTRAN_1.7): Add _gfortran_shape_{1,2}.
	* m4/shape.m4: Fix parameter type.

2015-08-26  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>

	* libgfortran.h (show_variables): Remove prototype.
	* runtime/environ.c (print_spaces, var_source, show_integer,
	show_boolean, show_sep, show_string): Remove functions.
	* runtime/main.c (init): Remove dead code.

2015-08-25  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>

	* io/unit.c (get_internal_unit): Make default sign mode unspecified.
	(init_units): Make default sign mode unspecified.

2015-08-25  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>

	* libgfortran.h (check_buffered): Remove unused prototype.
