@@ -1,3 +1,15 @@
+2015-08-31  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>
+
+	PR libfortran/47571
+	* acinclude.m4 (LIBGFOR_GTHREAD_WEAK): Remove.
+	(LIBGFOR_CHECK_WEAKREF): New test.
+	* configure.ac: Call LIBGFOR_CHECK_WEAKREF instead of
+	LIBGFOR_GTHREAD_WEAK.
+	* config.h.in: Regenerate.
+	* configure: Regenerate.
+	* intrinsics/system_clock.c: Use SUPPORTS_WEAKREF instead of
+	SUPPORTS_WEAK and GTHREAD_USE_WEAK.
+
 2015-08-29 Jerry DeLisle  <jvdelisle@gcc.gnu.org>
 
 	PR libgfortran/67367
